--- a/envs/DB_AKC_snakemake.yaml
+++ b/envs/DB_AKC_snakemake.yaml
@@ -12,6 +12,7 @@ dependencies:
   - appdirs=1.4.4
   - asttokens=2.0.5
   - async-timeout=4.0.2
+  - atk-1.0=2.36.0
   - attmap=0.13.2
   - attrs=21.4.0
   - backcall=0.2.0
@@ -23,6 +24,7 @@ dependencies:
   - c-ares=1.18.1
   - ca-certificates=2022.6.15
   - cachetools=5.0.0
+  - cairo=1.16.0
   - charset-normalizer=2.0.12
   - coin-or-cbc=2.10.8
   - coin-or-cgl=0.60.6
@@ -37,9 +39,24 @@ dependencies:
   - defusedxml=0.7.1
   - dropbox=11.32.0
   - executing=0.8.3
+  - expat=2.4.8
+  - fftw=3.3.10
   - filechunkio=1.8
   - filelock=3.7.1
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=3.000
+  - font-ttf-source-code-pro=2.038
+  - font-ttf-ubuntu=0.83
+  - fontconfig=2.14.0
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
+  - freetype=2.10.4
+  - fribidi=1.0.10
   - ftputil=5.0.4
+  - gdk-pixbuf=2.42.8
+  - gettext=0.19.8.1
+  - ghostscript=9.54.0
+  - giflib=5.2.1
   - gitdb=4.0.9
   - gitpython=3.1.27
   - google-api-core=2.8.1
@@ -49,29 +66,41 @@ dependencies:
   - google-cloud-core=2.3.1
   - google-cloud-storage=2.4.0
   - google-resumable-media=2.3.3
+  - graphite2=1.3.13
+  - graphviz=3.0.0
+  - gtk2=2.24.33
+  - gts=0.7.6
+  - harfbuzz=4.3.0
   - httplib2=0.20.4
   - icu=70.1
   - idna=3.3
+  - imagemagick=7.1.0_37
   - importlib_resources=5.8.0
   - iniconfig=1.1.1
+  - jbig=2.1
   - jinja2=3.1.2
   - jmespath=1.0.0
+  - jpeg=9e
   - jsonschema=4.6.0
   - jupyter_core=4.10.0
   - keyutils=1.6.1
   - krb5=1.19.3
   - ld_impl_linux-64=2.38
+  - lerc=3.0
   - libarchive=3.5.2
   - libblas=3.9.0
   - libcblas=3.9.0
   - libcrc32c=1.1.2
   - libcurl=7.83.1
+  - libdeflate=1.12
   - libedit=3.1.20210910
   - libev=4.33
   - libffi=3.4.2
   - libgcc-ng=12.1.0
+  - libgd=2.3.3
   - libgfortran-ng=12.1.0
   - libgfortran5=12.1.0
+  - libglib=2.70.2
   - libgomp=12.1.0
   - libiconv=1.16
   - liblapack=3.9.0
@@ -80,12 +109,19 @@ dependencies:
   - libnghttp2=1.47.0
   - libnsl=2.0.0
   - libopenblas=0.3.20
+  - libpng=1.6.37
   - libprotobuf=3.20.1
+  - librsvg=2.54.3
   - libsodium=1.0.18
   - libsolv=0.7.22
   - libssh2=1.10.0
   - libstdcxx-ng=12.1.0
+  - libtiff=4.4.0
+  - libtool=2.4.6
   - libuuid=2.32.1
+  - libwebp=1.2.2
+  - libwebp-base=1.2.2
+  - libxcb=1.13
   - libxml2=2.9.14
   - libzlib=1.2.12
   - logmuse=0.2.6
@@ -95,18 +131,25 @@ dependencies:
   - nbformat=5.4.0
   - ncurses=6.3
   - oauth2client=4.1.3
+  - openjpeg=2.4.0
   - openssl=1.1.1o
   - packaging=21.3
+  - pango=1.50.7
   - paramiko=2.11.0
   - parso=0.8.3
+  - pcre=8.45
   - peppy=0.31.2
+  - perl=5.32.1
   - pexpect=4.8.0
   - pickleshare=0.7.5
   - pip=22.1.2
+  - pixman=0.40.0
+  - pkg-config=0.29.2
   - plac=1.3.5
   - ply=3.11
   - prettytable=3.3.0
   - prompt-toolkit=3.0.29
+  - pthread-stubs=0.4
   - ptyprocess=0.7.0
   - pure_eval=0.2.2
   - py=1.11.0
@@ -139,8 +182,7 @@ dependencies:
   - slacker=0.14.0
   - smart_open=6.0.0
   - smmap=3.0.5
-  - snakemake=7.8.2
-  - snakemake-minimal=7.8.2
+  - snakemake-minimal=6.15.5
   - sqlite=3.38.5
   - stack_data=0.3.0
   - stone=3.3.1
@@ -160,6 +202,18 @@ dependencies:
   - veracitools=0.1.3
   - wcwidth=0.2.5
   - wheel=0.37.1
+  - xorg-kbproto=1.0.7
+  - xorg-libice=1.0.10
+  - xorg-libsm=1.2.3
+  - xorg-libx11=1.7.2
+  - xorg-libxau=1.0.9
+  - xorg-libxdmcp=1.1.3
+  - xorg-libxext=1.3.4
+  - xorg-libxrender=0.9.10
+  - xorg-libxt=1.2.1
+  - xorg-renderproto=0.11.1
+  - xorg-xextproto=7.3.0
+  - xorg-xproto=7.0.31
   - xz=5.2.5
   - yaml=0.2.5
   - yaml-cpp=0.7.0
@@ -190,6 +244,7 @@ dependencies:
     - mamba==0.24.0
     - markupsafe==2.1.1
     - multidict==6.0.2
+    - networkx==2.8.4
     - numpy==1.22.4
     - pandas==1.4.2
     - pluggy==1.0.0
@@ -197,6 +252,7 @@ dependencies:
     - psutil==5.9.1
     - pulp==2.6.0
     - pycosat==0.6.3
+    - pygraphviz==1.9
     - pynacl==1.5.0
     - pyrsistent==0.18.1
     - pysocks==1.7.1
@@ -204,6 +260,7 @@ dependencies:
     - pyyaml==6.0
     - ruamel-yaml-conda==0.15.100
     - setuptools==62.3.4
+    - snakemake==6.15.5
     - wrapt==1.14.1
     - yarl==1.7.2
     - yte==1.5.1
