the last scripts not previously added to vcs

--- a/config.yaml
+++ b/config.yaml
@@ -29,6 +29,7 @@ external_dir: "data/external/"
 interim_dir: "data/interim/"
 processed_dir: "data/processed/"
 raw_dir: "data/raw/cellranger-mm10/"
+raw_base_dir: "data/raw/"
 report_dir: "reports/"
 docs_dir: "docs/"
 data_owner: "DB_AKC"
