updated conda env spec to latest version

--- a/envs/DB_AKC_R.yaml
+++ b/envs/DB_AKC_R.yaml
@@ -7,6 +7,8 @@ dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
   - _r-mutex=1.0.1
+  - backports=1.0
+  - backports.functools_lru_cache=1.6.4
   - binutils_impl_linux-64=2.36.1
   - binutils_linux-64=2.36
   - bioconductor-limma=3.50.1
@@ -14,17 +16,18 @@ dependencies:
   - bwidget=1.9.14
   - bzip2=1.0.8
   - c-ares=1.18.1
-  - ca-certificates=2022.6.15
+  - ca-certificates=2022.9.24
   - cairo=1.16.0
-  - certifi=2022.6.15
+  - certifi=2022.9.24
   - cffi=1.15.0
   - charset-normalizer=2.0.12
   - colorama=0.4.4
   - conda=4.12.0
   - conda-package-handling=1.8.1
-  - cryptography=37.0.2
-  - curl=7.83.1
+  - cryptography=38.0.4
+  - curl=7.86.0
   - expat=2.4.8
+  - fmt=9.1.0
   - font-ttf-dejavu-sans-mono=2.37
   - font-ttf-inconsolata=3.000
   - font-ttf-source-code-pro=2.038
@@ -37,7 +40,7 @@ dependencies:
   - gcc_impl_linux-64=10.3.0
   - gcc_linux-64=10.3.0
   - geos=3.10.3
-  - gettext=0.21.0
+  - gettext=0.21.1
   - gfortran_impl_linux-64=10.3.0
   - gfortran_linux-64=10.3.0
   - glpk=5.0
@@ -47,7 +50,7 @@ dependencies:
   - gxx_impl_linux-64=10.3.0
   - gxx_linux-64=10.3.0
   - harfbuzz=4.3.0
-  - hdf5=1.12.1
+  - hdf5=1.12.2
   - icu=70.1
   - idna=3.3
   - jpeg=9e
@@ -58,7 +61,7 @@ dependencies:
   - lerc=3.0
   - libarchive=3.5.2
   - libblas=3.9.0
-  - libcurl=7.83.1
+  - libcurl=7.86.0
   - libdeflate=1.10
   - libedit=3.1.20210910
   - libev=4.33
@@ -67,18 +70,19 @@ dependencies:
   - libgcc-ng=12.1.0
   - libgfortran-ng=12.1.0
   - libgfortran5=12.1.0
-  - libglib=2.70.2
+  - libglib=2.74.1
   - libgomp=12.1.0
-  - libiconv=1.16
+  - libiconv=1.17
   - liblapack=3.9.0
-  - libmamba=0.24.0
-  - libmambapy=0.24.0
+  - libmamba=1.0.0
+  - libmambapy=1.0.0
   - libnghttp2=1.47.0
   - libnsl=2.0.0
   - libopenblas=0.3.20
   - libpng=1.6.37
   - libsanitizer=10.3.0
   - libsolv=0.7.22
+  - libsqlite=3.40.0
   - libssh2=1.10.0
   - libstdcxx-devel_linux-64=10.3.0
   - libstdcxx-ng=12.1.0
@@ -86,26 +90,29 @@ dependencies:
   - libuuid=2.32.1
   - libwebp-base=1.2.2
   - libxcb=1.13
-  - libxml2=2.9.14
-  - libzlib=1.2.12
+  - libxml2=2.10.3
+  - libzlib=1.2.13
   - lz4-c=1.9.3
   - lzo=2.10
   - make=4.3
-  - mamba=0.24.0
+  - mamba=1.0.0
   - ncurses=6.3
-  - openssl=1.1.1p
+  - openssl=3.0.7
   - pango=1.50.7
   - pcre=8.45
   - pcre2=10.37
   - pip=22.1.2
   - pixman=0.40.0
+  - prompt-toolkit=3.0.33
+  - prompt_toolkit=3.0.33
   - pthread-stubs=0.4
   - pybind11-abi=4
   - pycosat=0.6.3
   - pycparser=2.21
+  - pygments=2.13.0
   - pyopenssl=22.0.0
   - pysocks=1.7.1
-  - python=3.9.13
+  - python=3.9.15
   - python_abi=3.9
   - r-abind=1.4_5
   - r-askpass=1.1
@@ -161,7 +168,7 @@ dependencies:
   - r-gridextra=2.3
   - r-gtable=0.3.0
   - r-gtools=3.9.2.1
-  - r-hdf5r=1.3.5
+  - r-hdf5r=1.3.7
   - r-here=1.0.1
   - r-hexbin=1.28.2
   - r-htmltools=0.5.2
@@ -169,7 +176,7 @@ dependencies:
   - r-httpuv=1.6.5
   - r-httr=1.4.3
   - r-ica=1.0_2
-  - r-igraph=1.3.1
+  - r-igraph=1.3.5
   - r-irlba=2.3.5
   - r-isoband=0.2.5
   - r-jquerylib=0.1.4
@@ -194,7 +201,7 @@ dependencies:
   - r-munsell=0.5.0
   - r-nlme=3.1_157
   - r-npsurv=0.5_0
-  - r-openssl=2.0.2
+  - r-openssl=2.0.4
   - r-parallelly=1.31.1
   - r-patchwork=1.1.1
   - r-pbapply=1.5_0
@@ -269,6 +276,8 @@ dependencies:
   - r-xtable=1.8_4
   - r-yaml=2.3.5
   - r-zoo=1.8_10
+  - radian=0.6.4
+  - rchitect=0.3.39
   - readline=8.1.2
   - reproc=14.2.4
   - reproc-cpp=14.2.4
@@ -284,6 +293,7 @@ dependencies:
   - tqdm=4.64.0
   - tzdata=2022a
   - urllib3=1.26.9
+  - wcwidth=0.2.5
   - wheel=0.37.1
   - xorg-kbproto=1.0.7
   - xorg-libice=1.0.10
@@ -297,9 +307,9 @@ dependencies:
   - xorg-renderproto=0.11.1
   - xorg-xextproto=7.3.0
   - xorg-xproto=7.0.31
-  - xz=5.2.5
+  - xz=5.2.6
   - yaml=0.2.5
   - yaml-cpp=0.7.0
-  - zlib=1.2.12
+  - zlib=1.2.13
   - zstd=1.5.2
 prefix: /home/raz/anaconda3/envs/DB_AKC_R
